--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.1'
+        kotlinCompilerExtensionVersion = "1.4.0"
     }
     packagingOptions {
         resources {
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.0-rc01"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-rc01"
     implementation 'androidx.compose.material3:material3:1.0.0-rc01'
+    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
