--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,18 +67,18 @@ dependencies {
     // Compose Navigation
     implementation "androidx.navigation:navigation-compose:2.6.0-alpha02"
 
-    ///Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Ktor client
+    def ktor_version = "1.6.4"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-android:$ktor_version"
+    implementation "io.ktor:ktor-client-serialization:$ktor_version"
+    implementation "io.ktor:ktor-client-logging:$ktor_version"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
 
-    ///Room
-    implementation("androidx.room:room-runtime:2.4.3")
-    annotationProcessor("androidx.room:room-compiler:2.4.3")
-    // To use Kotlin annotation processing tool (kapt)
-    kapt("androidx.room:room-compiler:2.4.3")
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:2.4.3")
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
 
-    ///Hilt
+
+    // Hilt
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 }
