--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 buildscript {
-    ext {
-        compose_version = '1.2.1'
+    ext.kotlin_version = '1.9.0'
+    repositories { mavenCentral() }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+    ext {
+        compose_version = '1.5.1'
+    }
+}
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.library' version '8.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id("com.google.dagger.hilt.android") version "2.44" apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.0' apply(false)
 }
